--- a/Autenticacion/.gitignore
+++ b/Autenticacion/.gitignore
@@ -1,7 +1,14 @@
 # Created by https://www.toptal.com/developers/gitignore/api/windows,python,venv,dotenv
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,python,venv,dotenv
 
+
+
+
 ### Django ###
+
+*.pyo
+*.swp
+*.swo
 *.log
 *.pot
 *.pyc
