--- a/Autenticacion/requirements.txt
+++ b/Autenticacion/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 certifi==2024.8.30
 charset-normalizer==3.4.0
 Django==5.1.2
+django-recaptcha==4.0.0
 googlemaps==4.10.0
 idna==3.10
 python-dotenv==1.0.1
