--- a/Autenticacion/vercel.json
+++ b/Autenticacion/vercel.json
@@ -4,13 +4,13 @@
     {
       "src": "Auth/wsgi.py",
       "use": "@vercel/python",
-      "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+      "config": { "runtime": "python3.9" }
     },
     {
       "src": "build_files.sh",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "staticfiles_build"
+        "distDir": "staticfiles"
       }
     }
   ],
@@ -23,5 +23,9 @@
       "src": "/(.*)",
       "dest": "Auth/wsgi.py"
     }
-  ]
+  ],
+  "env": {
+    "DJANGO_SETTINGS_MODULE": "Auth.settings",
+    "PYTHONUNBUFFERED": "1"
+  }
 }
